--- a/docs/content/getting-started/comparison.mdx
+++ b/docs/content/getting-started/comparison.mdx
@@ -3,37 +3,35 @@ title: Comparison
 description: Comparison of Corsair versus other integration approaches.
 ---
 
-Here are reasons why you may want to use Corsair over other approaches to building integrations.
-
-### vs Individual SDKs
+### Corsair vs Individual SDKs
 
 - **One syntax everywhere** — Learn once, use for all integrations
 - **Consistent types** — Same patterns for Slack, Linear, GitHub, and more
 - **No SDK sprawl** — One dependency instead of dozens
 - **Unified error handling** — Handle rate limits and retries the same way across all services
 
-### vs Building From Scratch
+### Corsair vs Building From Scratch
 
 - **Skip the boilerplate** — Auth, webhooks, and data sync handled for you
 - **Out-of-order webhooks solved** — Corsair handles the edge cases that break most implementations
 - **Production-ready patterns** — Multi-tenancy, credential encryption, and retry logic built in
 - **Focus on your product** — Spend time on features, not integration plumbing
 
-### vs Integration Platforms (Zapier, Make)
+### Corsair vs Integration Platforms (Zapier, Make)
 
 - **Keep your data** — Everything stays in your database, not a third-party service
 - **No per-action costs** — Scale without worrying about integration billing
 - **Full control** — Customize behavior with hooks, not visual builders
 - **Embedded in your app** — Native TypeScript, not external workflows
 
-### vs iPaaS / Unified API Services
+### Corsair vs iPaaS / Unified API Services
 
 - **Self-hosted** — No vendor lock-in or external dependencies
 - **Your database** — Data lives where you control it
 - **No latency overhead** — Direct API calls, not proxied through a third party
 - **Open source** — Inspect, extend, and contribute
 
-### vs Maintaining Legacy Integrations
+### Corsair vs Maintaining Legacy Integrations
 
 - **Four tables forever** — Adding integrations doesn't bloat your schema
 - **Always fresh data** — Webhooks and API responses keep records in sync
