update docs intro page

--- a/docs/content/getting-started/introduction.mdx
+++ b/docs/content/getting-started/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: The integration layer for your application.
 ---
 
-Corsair is a unified SDK for integrating third-party services into TypeScript applications. Corsair provides credential security, tenant data isolation, and rate limiting out of the box. You can work with Slack, Linear, GitHub, or hundreds of other integrations, you use the same syntax, same types, and the same four database tables. Corsair is designed to extend to other integration seamlessly. Focus on building your product instead of writing the same boilerplate integration code.
+Corsair is a unified SDK for integrating third-party services into TypeScript applications. Corsair provides credential security, tenant data isolation, and rate limiting out of the box. You can work with hundreds of integrations like Slack or Github. Use the same syntax, same types, and the same four database tables. Focus on building your product instead of writing the same boilerplate integration code.
 
 ```ts title="corsair.ts"
 import { createCorsair } from "corsair";
